# preflight

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/preflight/: __init__.py  cli.py  models.py  scanner.py
src/preflight/detectors/: __init__.py  envvars.py  languages.py  packages.py  ports.py  services.py
src/preflight/formatters/: __init__.py  terminal.py
tests/: conftest.py  test_cli.py  test_envvars.py  test_formatters.py  test_languages.py  test_models.py  test_packages.py  test_ports.py  test_scanner.py  test_services.py
tests/fixtures/docker_project/: Dockerfile  docker-compose.yml
tests/fixtures/go_project/: go.mod  main.go
tests/fixtures/node_project/: index.js  package.json
tests/fixtures/python_project/: app.py  requirements.txt
tests/fixtures/rust_project/: Cargo.toml  main.rs
