[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "preflight"
version = "0.1.0"
description = "Scan a project directory and report everything needed to run it."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Zanden Kane" },
]
keywords = ["cli", "project", "scanner", "dependencies", "devtools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
preflight = "preflight.cli:main"

[project.urls]
Homepage = "https://github.com/zandenkane/preflight"
Repository = "https://github.com/zandenkane/preflight"
Issues = "https://github.com/zandenkane/preflight/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/preflight"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
